--- a/public/css/style.css
+++ b/public/css/style.css
@@ -107,7 +107,15 @@ b {
     font-size: 20px;
 }
 
+/************************* BurgerMenu ***************************/
+/****************************************************************/
+nav #burger-btn {
+    font-size: 22px;
+    border: none;
+    background: none;
 
+    display: none; /* display only in tablet & phone */
+}
 
 /************************* Wrapper ***************************/
 /*************************************************************/
@@ -186,13 +194,7 @@ nav a:not(.nav-main) {
     transition: 0.3s;
 }
 
-nav #burger-btn {
-    font-size: 22px;
-    border: none;
-    background: none;
 
-    display: none;
-}
 
 
 /************************* Table ***************************/
@@ -703,6 +705,20 @@ and (max-device-width : 768px) {
         font-size: 18px;
     }
 
+    /************************* BurgerMenu ***************************/
+    /****************************************************************/
+    nav #burger-btn {
+        display: initial;
+    }
+
+    .burger-items {
+        
+    }
+
+    .burger-content {
+
+    }
+
     /************************* Wrapper ***************************/
     /*************************************************************/
     #wrapper {
@@ -738,9 +754,6 @@ and (max-device-width : 768px) {
         display: none;
     }
 
-    nav #burger-btn {
-        display: initial;
-    }
 
     /************************ HomePage ************************/
     /**********************************************************/
