--- a/public/css/style.css
+++ b/public/css/style.css
@@ -240,9 +240,9 @@ nav a:not(.nav-main) {
     position: relative;
 }
 
-.table-item:not(:first-child) {
+/* .table-item:not(:first-child) {
     border-left: 1px solid var(--primary-color);
-}
+} */
 
 .wrap-details-user .table-list .table-item:not(:first-child) {
     border: 0;
@@ -692,12 +692,16 @@ and (max-device-width : 768px) {
         color: var(--primary-color-text);
         font-size: var(--font-size-big);
         font-weight: var(--weight-bold);
+
+        padding: 0 20px;
     }
     
     .secondary-title {
         color: var(--secondary-color-text);
         font-size: var(--font-size-big);
         font-weight:normal;
+
+        padding: 0 20px;
     }
     
     b {
@@ -711,12 +715,38 @@ and (max-device-width : 768px) {
         display: initial;
     }
 
-    .burger-items {
-        
+    #burger-content {
+        display: flex;
+        flex-direction: column;
+
+        position: absolute;
+        top: 50px;
+        right: 10%;
+
+        /* border: 1px solid var(--alert-color); */
+        border-radius: 2px ;
+
+        background-color: var(--secondary-background);
+        /* box-shadow: var(--shadow); */
+        box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+        z-index: 99;
     }
 
-    .burger-content {
+    #nav:last-child {
+        justify-content: flex-end;
+    }
 
+    #burger-content .burger-items {
+        align-self: flex-end;
+    }
+
+    .show {
+        width: 200px;
+        height: fit-content;
+    }
+
+    #burger-content .showItems {
+        display: initial;
     }
 
     /************************* Wrapper ***************************/
@@ -734,6 +764,8 @@ and (max-device-width : 768px) {
         
         flex: initial;
         flex-direction: row;
+
+        position: relative;
     }
 
     nav a:first-child {
@@ -741,6 +773,7 @@ and (max-device-width : 768px) {
     }
     
     nav .nav-main {
+        font-size: 20px;
         margin: 10px;  
         flex-direction: row;
     }
@@ -753,7 +786,6 @@ and (max-device-width : 768px) {
     nav .fa-caret-right {
         display: none;
     }
-
 
     /************************ HomePage ************************/
     /**********************************************************/
@@ -892,7 +924,7 @@ and (max-device-width : 768px) {
 
     .table-row:last-child, 
     .table-free:last-child, 
-    .table-section:last-child  {
+    .table-section:last-child {
         border-bottom-left-radius: 4px ;
         border-bottom-right-radius: 4px ;
     }
@@ -903,7 +935,7 @@ and (max-device-width : 768px) {
     }
 
     .table-header {
-        height: 35px;
+        /* height: 35px; */
         background-color: var(--primary-color);
     }
 
@@ -915,12 +947,6 @@ and (max-device-width : 768px) {
         font-size: var(--font-size-title);
         font-weight: var(--weight-bold);
     }
-
-    /* .table-row a {
-        position: absolute;
-        top: 25%;
-        right: 50px;
-    } */
 
     /* edit btn */
     .fa-pen-to-square { 
@@ -935,30 +961,35 @@ and (max-device-width : 768px) {
         right: 50px;
     }
 
-    /* delete btn */
-    .fa-trash-can {
-        font-size: 23px;
+    /*************************** GridDetailsSession ***************************/
+    /**************************************************************************/
+    .wrap-details-session {
+        display: grid;
 
-        color: var(--danger-color);
-        border: none;
-        border-radius: 50%;
+        grid-template-columns: auto auto auto auto auto auto;
+        grid-template-rows: auto;
 
-        position: absolute;
-        top: 25%;
-        right: 10px;
-    }
-
-    .fa-chevron-up, .fa-chevron-down {
-        font-size: 23px;
+        column-gap: 25px;
+        row-gap: 15px;
 
         color: var(--secondary-color-text);
+    }
 
-        position: absolute;
-        top: 25%;
-        right: 40px;
+    .wrap-details-session .form-create {
+        grid-column: 1 / -1;
+    }
 
-        cursor: pointer;
-    } 
+    .wrap-details-session #table-information {
+        grid-column: 1 / -1;
+    }
+
+    #table-information p, #table-information div {
+        padding: 2px 0;
+    }
+
+    .passed-sessions-content {
+        display: none;
+    }
 
 }
 
