--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -56,6 +56,7 @@
 
                     <button id="burger-btn">
                         <i class="fa-solid fa-bars"></i>
+                        {# MENU #}
                     </button>
                 </nav>
             </header>
@@ -77,8 +78,8 @@
 
             {% block javascripts %}
             <script src="https://kit.fontawesome.com/3fb828feff.js" crossorigin="anonymous"></script>
-            <script src="{{ asset('app/app.js') }}"></script>
             {% endblock %}
         </div>
+        <script src="{{ asset('app/app.js') }}"></script>
     </body>
 </html>
